| Summary: | ASTERISK-25771: ARI:Crash - Attended transfers of channels into Stasis application. | ||||
| Reporter: | Javier Riveros (goseeped) | Labels: | |||
| Date Opened: | 2016-02-11 12:36:19.000-0600 | Date Closed: | 2016-03-15 09:32:41 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Core/Bridging Resources/res_ari | ||
| Versions: | 13.7.2 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) backtrace.txt ( 1) crashDebugLog ( 2) gdb.txt ( 3) refer_crash_stasis_transfer.pcap | |||
| Description: | When performing a SIP level attended transfer into Stasis it works with common hardphones out there “Polycom, Cisco …” but when you do it with some softphones asterisk just crash as an example of this use open source “Jitsi” softphone it allow you to perform attended transfers for free. So when you make the attended transfer into DialPlan it just work but when you do it into the stasis app asterisk just crash.
To reproduce this use last stable version of asterisk 13.7.2 then register 3 phones (one of then should be Jitsi) then make two outbound calls from Jitsi and perform the transfer/Refer then you will see something like this in the console. {code} [Feb 6 01:22:33] ERROR[9656]: stasis/stasis_bridge.c:59 bridge_stasis_run_cb: Failed to get app name for Local/_attended@transfer-00000000;1 (0x7fce9807c4d8) [Feb 6 01:22:33] ERROR[9457]: bridge.c:4047 attended_transfer_bridge: FRACK!, Failed assertion local_chan2 != NULL (0) Got 13 backtrace records #0: [0x55c4e1fc19bd] asterisk <unknown>() #1: [0x55c4e1fc34ea] asterisk ast_bridge_transfer_attended() (0x55c4e1fc2ba0+94A) #2: [0x7fce55532c70] res_pjsip_refer.so <unknown>() #3: [0x55c4e20ff5ee] asterisk ast_taskprocessor_execute() (0x55c4e20ff540+AE) #4: [0x55c4e2106b60] asterisk <unknown>() #5: [0x55c4e20ff5ee] asterisk ast_taskprocessor_execute() (0x55c4e20ff540+AE) #6: [0x55c4e21065a4] asterisk <unknown>() #7: [0x55c4e210f808] asterisk <unknown>() ip-172-19-10-70*CLI> Disconnected from Asterisk server {code} Attached is the core_dump files, sip/media capture and full debug file. Anything else you need let me know, Please asterisk don’t let them make you crash :) -Javier | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2016-02-11 12:36:21.492-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Javier Riveros (goseeped) 2016-02-11 12:40:45.225-0600 This are the core dump files, Debug, and capture By: Javier Riveros (goseeped) 2016-03-04 14:30:12.303-0600 Seems like i will Report this Bye delay into Jitsi community too ! :) | ||||